*
* 0.2.6
*

- Added possibility to change size of ICMP echo request packets sent by server
- PING subagent:
	- Ported to NetWare
	- Added "packet size" argument to Icmp.Ping(*) parameter
	- Added "packet size" option to target configuration
	- Added DefaultPacketSize configuration parameter


*
* 0.2.5
*

- Added support for CheckPoint SNMP agent running on port 260
- Added SNMP MIBs for Nokia IPSO
- Added new parameter Agent.ActiveConnections to core agent
- Implemented object tools of type "Agent Table" and "SNMP Table"
- Windows console:
	- Sorting implemented in "Last DCI Values" view
	- Added node tree in alarm browser
	- Added possibility to copy DCIs to template
- Fixed bug in core agent causing incorrect update of configuration file
- Fixed incorrect interface aliases detection in Linux subagent
- Fixed issues: #36, #39, #42, #45


*
* 0.2.4
*

- Implemented agent's configuration file editing from console
- Implemented actions provided by subagents
- Built-in action Agent.Restart added to core agent
- Configurable object tools introduced (not fully implemented yet)
- Fixed bug causing occasional server crash
- Fixed issues: #5, #37, #38, #40, #41


*
* 0.2.3
*

- Implemented basic event correlation
- Added new object class: VPN connector
- Active alarms now used in status calculation
- Windows agent: implemented enum Net.IP.RoutingTable
- Database Manager: implemented forced check/unlock flag
- Maximum number of sessions in agent made configurable
- Agent ported to Windows 95/98/Me
- Windows console: added possibility to specify loopback address (127.0.0.1)
  as bind address for network service
- Fixed bug causing random fails of connections from server to agent and
  from console to server
- Fixed issues: #29, #32, #33


*
* 0.2.2
*

- Implemented communication session encryption
- Added support for multiple database connections for better performance
- Added generation of SYS_NODE_DOWN and SYS_NODE_UP events